cargo-features = ["edition2021"]

[package]
name = "mterm"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Provides a framework for single window applications that render ASCII text."
repository = "https://github.com/cthutu/mterm"

[dependencies]
bytemuck = "1.7"
bytemuck_derive = "1.0"
futures = "0.3"
image = "0.23"
thiserror = "1.0"
wgpu = "0.9"
winit = "0"
time = "0.2"
